commit: implement dog classification feature in the APP

--- a/demo/src/main/res/layout/activity_picture_preview.xml
+++ b/demo/src/main/res/layout/activity_picture_preview.xml
@@ -15,10 +15,10 @@
             android:layout_gravity="center_horizontal"
             android:adjustViewBounds="true" />
 
-        <com.shelly.dogs.demo.MessageView
-            android:id="@+id/nativeCaptureResolution"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+        <!--<com.shelly.dogs.demo.MessageView-->
+            <!--android:id="@+id/nativeCaptureResolution"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"/>-->
 
         <!-- com.otaliastudios.cameraview.demo.MessageView
             android:id="@+id/actualResolution"
